--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,21 @@
+/*<!--//Use SASS to write your CSS
+//SASS files are:
+//
+//main.scss
+//which will import:
+//
+//normalize.scss
+//variables.scss
+//mixins.scss		
+//sticky-footer.scss
+//
+//You may divide your sass into addition files as you wish.
+//Eg: 
+//- grid.scss
+//- buttons.scss-->*/
 .wrapper {
   overflow: auto;
-  background-color: rgba(223, 191, 92, 0.7); }
+  background-color: rgba(255, 150, 190, 0.8); }
 
 .box p {
   margin: 0 4% 4% 4%;
@@ -8,131 +23,196 @@
 
 .masthead {
   width: 100%;
-  background-color: #484848;
+  background-color: #404040;
   text-align: center;
   color: #dddddd;
-  padding-bottom: 1px;
-  padding-top: 1px;
-  font-family: "Nova Mono";
+  padding-bottom: 2px;
+  padding-top: 2px;
+  font-family: 'Lobster', cursive;
   box-shadow: 0 0 5px #fff; }
-
-.focal {
-  height: auto; }
 
 .row {
   float: left;
   display: flex;
   margin-right: 2%; }
 
-.col-3 {
+#box1 {
+  font-family: 'Lobster', cursive;
+  -webkit-transition: background 0.25s ease-in-out;
+  -moz-transition: background 0.25s ease-in-out;
+  -ms-transition: background 0.25s ease-in-out;
+  -o-transition: background 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out;
   flex: 1;
-  margin-left: 2%;
-  margin-top: 2%;
+  margin-left: 3%;
+  margin-top: 3%;
   padding-top: 2%;
-  background-color: rgba(60, 155, 102, 0.7);
-  width: 30.6%;
+  background-color: rgba(160, 55, 100, 0.7);
+  width: 30%;
   float: left;
   border-radius: 5px;
   color: #484848;
   text-align: center;
-  background-color: rgba(60, 155, 102, 0.7);
   border: 10px solid #fff;
   overflow: hidden;
   position: relative;
   box-shadow: 1px 1px 2px #e6e6e6;
-  cursor: pointer;
-  font-family: "Nova Mono";
+  cursor: pointer; }
+
+#box2 {
+  font-family: 'Lobster', cursive;
   -webkit-transition: background 0.25s ease-in-out;
   -moz-transition: background 0.25s ease-in-out;
   -ms-transition: background 0.25s ease-in-out;
   -o-transition: background 0.25s ease-in-out;
-  transition: background 0.25s ease-in-out; }
-
-.col-4 {
+  transition: background 0.25s ease-in-out;
   flex: 1;
-  margin-left: 2%;
-  margin-top: 2%;
+  margin-left: 3%;
+  margin-top: 3%;
+  padding-top: 2%;
+  background-color: rgba(160, 55, 100, 0.7);
+  width: 30%;
+  float: left;
+  border-radius: 5px;
+  color: #484848;
+  text-align: center;
+  border: 10px solid #fff;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 2px 2px 2px #e6e6e6;
+  cursor: pointer; }
+
+#box3 {
+  font-family: 'Lobster', cursive;
+  -webkit-transition: background 0.25s ease-in-out;
+  -moz-transition: background 0.25s ease-in-out;
+  -ms-transition: background 0.25s ease-in-out;
+  -o-transition: background 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out;
+  flex: 1;
+  margin-left: 3%;
+  margin-top: 3%;
+  padding-top: 2%;
+  background-color: rgba(160, 55, 100, 0.7);
+  width: 30%;
+  float: left;
+  border-radius: 5px;
+  color: #484848;
+  text-align: center;
+  border: 10px solid #fff;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 2px 2px 2px #e6e6e6;
+  cursor: pointer; }
+
+#box4 {
+  -webkit-transition: background 0.25s ease-in-out;
+  -moz-transition: background 0.25s ease-in-out;
+  -ms-transition: background 0.25s ease-in-out;
+  -o-transition: background 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out;
+  flex: 1;
+  margin-left: 3%;
+  margin-top: 3%;
   background-color: rgba(60, 155, 102, 0.7);
-  width: 22.5%;
+  width: 23%;
   margin-bottom: 2%;
   border-radius: 5px;
   color: #484848;
   text-align: center;
-  font-family: "Nova Mono";
-  border: 5px solid #fff;
+  font-family: 'Lobster', cursive;
+  border: 5px solid #fff; }
+
+#box5 {
   -webkit-transition: background 0.25s ease-in-out;
   -moz-transition: background 0.25s ease-in-out;
   -ms-transition: background 0.25s ease-in-out;
   -o-transition: background 0.25s ease-in-out;
-  transition: background 0.25s ease-in-out; }
+  transition: background 0.25s ease-in-out;
+  flex: 1;
+  margin-left: 3%;
+  margin-top: 3%;
+  background-color: rgba(60, 155, 102, 0.7);
+  width: 23%;
+  margin-bottom: 2%;
+  border-radius: 5px;
+  color: #484848;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  border: 5px solid #fff; }
 
-.btn {
-  background: #c1bdb7;
-  background: -moz-linear-gradient(top, #c1bdb7 0%, #646060 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #c1bdb7), color-stop(100%, #646060));
-  background: -webkit-linear-gradient(top, #c1bdb7 0%, #646060 100%);
-  background: -o-linear-gradient(top, #c1bdb7 0%, #646060 100%);
-  background: -ms-linear-gradient(top, #c1bdb7 0%, #646060 100%);
-  background: linear-gradient(top, #25A6E1 0%, #188BC0 100%);
-  padding: 8px 13px;
-  color: #fff;
-  font-family: 'Helvetica Neue',sans-serif;
-  font-size: 15px;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  font-family: "Nova Mono";
-  margin-bottom: 5%; }
-  
-  
- .col-4:hover,
- .col-3:hover {
-  background-color: rgba(95, 152, 198, 0.9); }
+#box6 {
+  -webkit-transition: background 0.25s ease-in-out;
+  -moz-transition: background 0.25s ease-in-out;
+  -ms-transition: background 0.25s ease-in-out;
+  -o-transition: background 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out;
+  flex: 1;
+  margin-left: 3%;
+  margin-top: 3%;
+  background-color: rgba(60, 155, 102, 0.7);
+  width: 23%;
+  margin-bottom: 2%;
+  border-radius: 5px;
+  color: #484848;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  border: 5px solid #fff; }
 
+#box7 {
+  -webkit-transition: background 0.25s ease-in-out;
+  -moz-transition: background 0.25s ease-in-out;
+  -ms-transition: background 0.25s ease-in-out;
+  -o-transition: background 0.25s ease-in-out;
+  transition: background 0.25s ease-in-out;
+  margin-left: 3%;
+  margin-top: 3%;
+  background-color: rgba(60, 155, 102, 0.7);
+  flex: 1;
+  width: 23%;
+  margin-bottom: 2%;
+  border-radius: 5px;
+  color: #484848;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  border: 5px solid #fff; }
 
-.col-3:hover h3,
-.col-3:hover p,
-.col-3:hover a.info {
-  opacity: 1;
-  transform: translateY(0px); }
-
-
-
+.swing {
+  -webkit-animation: swinging 10s ease-in-out 0s infinite;
+  -moz-animation: swinging 10s ease-in-out 0s infinite;
+  animation: swinging 10s ease-in-out 0s infinite;
+  -webkit-transform-origin: 50% 0;
+  -moz-transform-origin: 50% 0;
+  transform-origin: 50% 0; }
 
 @-webkit-keyframes swinging {
   0% {
     -webkit-transform: rotate(0); }
   20% {
-    -webkit-transform: rotate(10deg); }
+    -webkit-transform: rotate(7deg); }
   40% {
-    -webkit-transform: rotate(10deg); }
+    -webkit-transform: rotate(-5deg); }
   60% {
-    -webkit-transform: rotate(10deg); }
+    -webkit-transform: rotate(3deg); }
   80% {
     -webkit-transform: rotate(-1); }
   /* Come to rest at 50%. The rest is just stillness */
   100% {
     -webkit-transform: rotate(0); } }
-
-
-
 @-moz-keyframes swinging {
   0% {
     -moz-transform: rotate(0); }
   20% {
-    -moz-transform: rotate(10deg); }
+    -moz-transform: rotate(7deg); }
   40% {
-    -moz-transform: rotate(10deg); }
+    -moz-transform: rotate(-5deg); }
   60% {
-    -moz-transform: rotate(10deg); }
+    -moz-transform: rotate(3deg); }
   80% {
     -moz-transform: rotate(-1); }
   /* Come to rest at 50%. The rest is just stillness */
   100% {
     -moz-transform: rotate(0); } }
-
-
-
 @keyframes swinging {
   0% {
     transform: rotate(0); }
@@ -147,14 +227,11 @@
   /* Come to rest at 50%. The rest is just stillness */
   100% {
     transform: rotate(0); } }
-
-
-
 .col-3:hover > .iconic {
-   animation-delay: 0.05s;
-  -webkit-animation-delay: 0.05s;
-  -moz-animation-delay: 0.05s;
-  animation-delay: 0.05s;
+  animation-delay: 0.01s;
+  -webkit-animation-delay: 0.01s;
+  -moz-animation-delay: 0.01s;
+  animation-delay: 0.01s;
   -webkit-animation: swinging 1s ease-in-out 0s infinite;
   -moz-animation: swinging 1s ease-in-out 0s infinite;
   animation: swinging 1s ease-in-out 0s infinite;
@@ -165,49 +242,239 @@
   -moz-animation: swinging 0.5s normal forwards;
   -o-animation: swinging 0.5s normal forwards; }
 
-
 .col-3 p {
   font-size: 14px;
   position: relative;
   color: #fff;
-  padding-top: 2%;
+  padding-top: 2.5%;
   text-align: center;
   transform: translateY(100px);
   opacity: 0;
-  transition: all 0.2s linear; }
-  
-  
-  /******** responsive layout *******/
+  transition: all 0.4s linear; }
 
-@media screen and (min-width: $breakpoint-mobile){
-  .container{
-    max-width: $breakpoint-mobile;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: $breakpoint-small){
-  .container{
-    max-width: $breakpoint-small;
-  }
-}
-
-@media screen and (min-width: $breakpoint-medium){
-  .container{
-    max-width: $breakpoint-medium;
-  }
-}
-
-@media screen and (min-width: $breakpoint-large){
-  .container{
-    max-width: $breakpoint-large;
-  }
-}
-
+/******** responsive layout *******/
+@media screen and (min-width: 300px) {
+  .container {
+    max-width: 300px;
+    margin: 0 auto; } }
+@media screen and (min-width: 600px) {
+  .container {
+    max-width: 600px; } }
+@media screen and (min-width: 800px) {
+  .container {
+    max-width: 600px; } }
+@media screen and (min-width: 960px) {
+  .container {
+    max-width: 600px; } }
 /* =========== sticky footer =========== */
+/* =========== Sticky Footer =========== */
+html {
+  position: relative;
+  min-height: 100%; }
 
-@import 'sticky-footer';
+.wrapper {
+  margin: 0 0 50px; }
+
+.foot {
+  position: absolute;
+  left: 0;
+  bottom: 0.1px;
+  width: 100%;
+  height: 75px;
+  background-color: #404040;
+  color: #ffffff;
+  font-family: 'Lobster', cursive;
+  border-top: 1px solid #eee; }
 
 /* =========== normalize style =========== */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+  display: block; }
 
-@import 'normalize';
+audio,
+canvas,
+video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+[hidden], template {
+  display: none; }
+
+html {
+  background: #fff;
+  color: #000;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif; }
+
+body {
+  margin: 0; }
+
+a {
+  background: transparent; }
+  a:focus {
+    outline: thin dotted; }
+  a:hover, a:active {
+    outline: 0; }
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+h2 {
+  font-size: 1.5em;
+  margin: 0.83em 0; }
+
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0; }
+
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0; }
+
+h5 {
+  font-size: 0.83em;
+  margin: 1.67em 0; }
+
+h6 {
+  font-size: 0.75em;
+  margin: 2.33em 0; }
+
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+b,
+strong {
+  font-weight: bold; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background: #ff0;
+  color: #000; }
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em; }
+
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word; }
+
+q {
+  quotes: "\201C" "\201D" "\2018" "\2019"; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+small {
+  font-size: 80%; }
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
+
+img {
+  border: 0; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+figure {
+  margin: 0; }
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+legend {
+  border: 0;
+  padding: 0;
+  white-space: normal; }
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline; }
+
+button, input {
+  line-height: normal; }
+
+button,
+select {
+  text-transform: none; }
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer; }
+
+button[disabled],
+input[disabled] {
+  cursor: default; }
+
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+textarea {
+  overflow: auto;
+  vertical-align: top; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; }
+  input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none; }
+input[type="checkbox"], input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0; }
+
+/*# sourceMappingURL=main.css.map */
