--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,5 +1,4 @@
-
-
+//@import 'variables'
 
 @mixin margin_total() {
 	 margin-left: $margin_1;
@@ -12,4 +11,16 @@
 	}
 
 
-@mixin 
+
+
+
+@mixin elementEaseInOut($element) {
+	-webkit-transition: $element 0.25s ease-in-out;
+	-moz-transition: $element 0.25s ease-in-out;
+	-ms-transition: $element 0.25s ease-in-out;
+	-o-transition: $element 0.25s ease-in-out;
+	transition: $element 0.25s ease-in-out;
+}
+
+
+ 
