--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,4 @@
+//Responsive screens
 <!--//Responsive screens-->
 $mobile_1: 300px;
 $mobile_2: 600px;
@@ -7,15 +8,15 @@ $mobile_4: 960px;
 <!--//$wrapper-universal-margin:0%;-->
 $width_wrapper:100%;
 
-$margin_1: 2%;
+$margin_1: 3%;
 
 $width_header:96%;
 
-$width_box1:30.6%;
-$width_box2:30.6%;
-$width_box3:30.6%;
+$width_box1:30%;
+$width_box2:30%;
+$width_box3:30%;
 
-$width_box4:22.5%;
-$width_box5:22.5%;
-$width_box6:22.5%;
-$width_box7:22.5%;
+$width_box4:23%;
+$width_box5:23%;
+$width_box6:23%;
+$width_box7:23%;
