--- a/sass/sticky-footer.scss
+++ b/sass/sticky-footer.scss
@@ -15,21 +15,11 @@ html
 {
 	position: absolute;
 	left: 0;
-	bottom: 0;
+	bottom: 0.1px;
 	width: 100%;
-	height: 50px;
-	background-color: #484848;
-	color: #dddddd;
-	@include pagefont;
-	border-top: 1px solid #fff;
-//	box-shadow: 5px 0 0 #fff;
-	
-	
-//	p{
-//		vertical-align: middle;
-//		margin-top: 10px;
-//		margin-bottom: 10px;
-////		background-color: red;
-//	}
+	height: 75px;
+	background-color: #404040;
+	color: #ffffff;
+	@include fonts;
+	border-top: 1px solid #eee;
 }
-
