--- a/sass/main.scss
+++ b/sass/main.scss
@@ -210,10 +210,10 @@
 
 @-webkit-keyframes swinging{
 	0% { -webkit-transform: rotate(0); }
-	20% { -webkit-transform: rotate(7deg); }
-	40% { -webkit-transform: rotate(-5deg); }
-	60% { -webkit-transform: rotate(3deg); }
-	80% { -webkit-transform: rotate(-1); } /* Come to rest at 50%. The rest is just stillness */
+	20% { -webkit-transform: rotate(10deg); }
+	40% { -webkit-transform: rotate(-10deg); }
+	60% { -webkit-transform: rotate(10deg); }
+	80% { -webkit-transform: rotate(-10); } 
 	100% { -webkit-transform: rotate(0); }
 }
 
@@ -223,7 +223,7 @@
 	20% { -moz-transform: rotate(7deg); }
 	40% { -moz-transform: rotate(-5deg); }
 	60% { -moz-transform: rotate(3deg); }
-	80% { -moz-transform: rotate(-1); } /* Come to rest at 50%. The rest is just stillness */
+	80% { -moz-transform: rotate(-1); } 
 	100% { -moz-transform: rotate(0); }
 }
 
@@ -233,19 +233,18 @@
 	20% { transform: rotate(7deg); }
 	40% { transform: rotate(-5deg); }
 	60% { transform: rotate(3deg); }
-	80% { transform: rotate(-1); } /* Come to rest at 50%. The rest is just stillness */
+	80% { transform: rotate(-1); } 
 	100% { transform: rotate(0); }
 }
 
 .col-3:hover > .iconic
 {
-	//Animation delay
-	animation-delay: 0.01s;
-	-webkit-animation-delay: 0.01s;
-	-moz-animation-delay: 0.01s;
-	animation-delay: 0.01s;
+
+	animation-delay: 0.8s;
+	-webkit-animation-delay: 0.8s;
+	-moz-animation-delay: 0.8s;
+	animation-delay: 0.8s;
 	
-	//Add key frame animation for swinging
 	-webkit-animation:swinging 1s ease-in-out 0s infinite;
 	-moz-animation:swinging 1s ease-in-out 0s infinite;
 	animation:swinging 1s ease-in-out 0s infinite;
@@ -253,7 +252,6 @@
 	-moz-transform-origin:50% 0;
 	transform-origin:50% 0;
 
-	//Run the keyframe animation only once
 	-webkit-animation: swinging 0.5s normal forwards; 
   	-moz-animation:  swinging 0.5s normal forwards;
   	-o-animation:  swinging 0.5s normal forwards;
@@ -278,26 +276,26 @@
 /******** responsive layout *******/
 
 @media screen and (min-width: $mobile_1){
-  .container{
+  .wrapper{
     max-width: $mobile_1;
     margin: 0 auto;
   }
 }
 
 @media screen and (min-width: $mobile_2){
-  .container{
+  .wrapper{
     max-width: $mobile_2;
   }
 }
 
 @media screen and (min-width: $mobile_3){
-  .container{
+  .wrapper{
     max-width: $mobile_2;
   }
 }
 
 @media screen and (min-width: $mobile_4){
-  .container{
+  .wrapper{
     max-width: $mobile_2;
   }
 }
