--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,11 +1,10 @@
 //Responsive screens
-<!--//Responsive screens-->
+<!--//Responsive design-->
 $mobile_1: 300px;
 $mobile_2: 600px;
 $mobile_3: 800px;
 $mobile_4: 960px;
 
-<!--//$wrapper-universal-margin:0%;-->
 $width_wrapper:100%;
 
 $margin_1: 3%;
