--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -14,12 +14,12 @@
 
 
 
-@mixin elementEaseInOut($element) {
-	-webkit-transition: $element 0.25s ease-in-out;
-	-moz-transition: $element 0.25s ease-in-out;
-	-ms-transition: $element 0.25s ease-in-out;
-	-o-transition: $element 0.25s ease-in-out;
-	transition: $element 0.25s ease-in-out;
+@mixin elementEaseInOut($target) {
+	-webkit-transition: $target 0.25s ease-in-out;
+	-moz-transition: $target 0.25s ease-in-out;
+	-ms-transition: $target 0.25s ease-in-out;
+	-o-transition: $target 0.25s ease-in-out;
+	transition: $target 0.25s ease-in-out;
 }
 
 
