--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -10,9 +10,9 @@ $width_wrapper:100%;
 
 $margin_1: 3%;
 
-$width_header:96%;
-
-$width_box1:30%;
-$width_box2:23%;
+//$width_header:96%;
+//
+//$width_box1:30%;
+//$width_box2:23%;
 
 
